chore(spin): Revert changes to PowerMock dependency
Related to CAM-9309